--- a/pre_install.yml
+++ b/pre_install.yml
@@ -19,9 +19,11 @@
       loop:
         - docker-ce
         - docker-ce-cli
+        - docker-compose
         - containerd.io
         - java-1.8.0-openjdk-devel
         - jenkins
+        - wget
         - git
         - curl
         - unzip
@@ -30,15 +32,36 @@
       loop:
         - docker
         - jenkins
-    - name: Start docker and jenkins services
+    - name: Start docker services
       command: systemctl start "{{ item }}"
       loop:
         - docker
-        - jenkins
     - name: Add the user 'jenkins' and add it to 'sudo' and docker
       user:
         name: jenkins
         group: docker
+    - name: Start jenkins services
+      command: systemctl start "{{ item }}"
+      loop:
+        - jenkins
+    - name: Download SonarQube Scanner
+      get_url:
+        url: https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip
+        dest: /opt
+    - name: Unzip SonarQube Scanner
+      command: '{{ item }}'
+      loop:
+        - unzip /opt/sonar-scanner-cli-4.6.0.2311-linux.zip -d /opt
+        - mv /opt/sonar-scanner-4.6.0.2311-linux /opt/sonarscanner
+    - name: Download AWS CLI
+      get_url:
+        url: https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip
+        dest: /home/centos
+    - name: Move AWS CLI binary
+      command: '{{ item }}'
+      loop:
+        - unzip /home/centos/awscli-exe-linux-x86_64.zip -d /home/centos
+        - sh /home/centos/aws/install --bin-dir /usr/bin
     - name: Download jq binary
       get_url:
         url: https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
